--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <title>Random Quote Machine</title>
 </head>
 <body>
-    <div class="container" id="displayBox">
+    <div class="container text-center" >
         <div class="row">
-            <div class="col-sm-12" id="buttons">
-                <button id='getQuote'>Get Quote</button>
-                <a href="http://twitter.com/share">share</a>
+            <div class="col-sm-12" id="quoteBox">
+                <blockquote><h1 id="quote"></h1></blockquote>
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-12">
-                <p id="quote"></p>
+            <div class="col-sm-12" id="btnBox">
+                <button id='getQuote' class='btn btn-primary'>Get Quote</button>
+                <button id='getQuote' class='btn btn-info'>Share</button>
             </div>
         </div>
     </div>
