Add twitter share button

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         </div>
         <div class="row">
             <div class="col-sm-12" id="btnBox">
-                <button id='getQuote' class='btn btn-primary'>Get Quote</button>
-                <button id='getQuote' class='btn btn-info'>Share</button>
+                <button id='getQuote' class='btn btn-primary'>Get Quote</button> <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-show-count="false">Tweet</a>
             </div>
         </div>
     </div>
@@ -28,5 +27,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
     <script type="text/javascript" src="script.js"></script>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 </html>
