--- a/index.html
+++ b/index.html
@@ -9,31 +9,34 @@
     <title>Random Quote Machine</title>
 </head>
 <body>
+    <div id="fb-root"></div>
+  <script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.6";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
+
     <div class="container text-center" >
         <div class="row">
+
             <div class="col-sm-12" id="quoteBox">
+
                 <blockquote><h1 id="quote"></h1></blockquote>
             </div>
         </div>
+        <button id='getQuote' class='btn btn-primary'>Get Quote</button>
+                <button id='getQuote' class='btn btn-primary'>Highlight to share</button>
         <div class="row">
             <div class="col-sm-12" id="btnBox">
-                <button id='getQuote' class='btn btn-primary'>Get Quote</button>
-                <!-- Facebook Share / Like button -->
-                <div class="fb-like" data-href="https://preview.c9users.io/darahoy/careerdevs-academy/projects/quoteMachine/index.html?_c9_id=livepreview0&amp;_c9_host=https://ide.c9.io" data-layout="button" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
+
             </div>
         </div>
+        <div class="fb-quote"></div>
     </div>
 
-    <!-- Facebook Share/Like button-->
-    <div id="fb-root"></div>
-        <script>(function(d, s, id) {
-          var js, fjs = d.getElementsByTagName(s)[0];
-          if (d.getElementById(id)) return;
-          js = d.createElement(s); js.id = id;
-          js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.11&appId=129757571053026';
-          fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));</script>
-    <!-- End of Facebook Share/Like button -->
+
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
